--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,5 +36,5 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "vite": "^5.0.8"
   },
-  "proxy": "http://localhost:8800/backend"
+  "proxy": "http://localhost:8800/api"
 }
