--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "concurrently \"npm run dev -w backend\" \"npm run dev -w frontend\"",
     "build": "npm run build -ws --if-present",
-    "prod": "npm run start -w backend"
+    "prod": "npm start -w backend"
   },
   "author": "",
   "license": "ISC"
